# msync

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  client.c  main_notif.c  main_server.c  notif  server  server.c
.ccls-cache/@@home@ubuntu@repos@msync/: @snap@ccls@48@usr@lib@llvm-7@lib@clang@7.0.0@include@inttypes.h.blob  @snap@ccls@48@usr@lib@llvm-7@lib@clang@7.0.0@include@limits.h.blob  @snap@ccls@48@usr@lib@llvm-7@lib@clang@7.0.0@include@stdarg.h.blob  @snap@ccls@48@usr@lib@llvm-7@lib@clang@7.0.0@include@stddef.h.blob  @snap@ccls@48@usr@lib@llvm-7@lib@clang@7.0.0@include@stdint.h.blob  @usr@include@alloca.h.blob  @usr@include@arpa@inet.h.blob  @usr@include@asm-generic@bitsperlong.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm-generic@posix_types.h.blob  @usr@include@asm-generic@socket.h.blob  @usr@include@asm-generic@sockios.h.blob  @usr@include@assert.h.blob  @usr@include@c++@9@bits@std_abs.h.blob  @usr@include@c++@9@cstdlib.blob  @usr@include@c++@9@stdlib.h.blob  @usr@include@ctype.h.blob  @usr@include@dirent.h.blob  @usr@include@endian.h.blob  @usr@include@errno.h.blob  @usr@include@fcntl.h.blob  @usr@include@features.h.blob  @usr@include@inttypes.h.blob  (+123 more)
src/: collection.c  collection.h  collections.c  collections.h  connection.c  connection.h  darray.c  darray.h  events.c  events.h  fs.c  fs.h  hashmap.c  hashmap.h  net.c  net.h  notif.c  notif.c.bak  notif.h  notify.c  notify.h
tests/: darray_tests  darray_tests.c  hashmap_tests  hashmap_tests.c  munit.h  runtests.sh
(+25 files in other folders)
